--- a/Experiment 1 (Portfolio)/grades.html
+++ b/Experiment 1 (Portfolio)/grades.html
@@ -2,77 +2,7 @@
 <html>
 <head>
     <title>Grades</title>
-    <style>
-        /* General Styles */
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            background-color: #f4f4f4;
-            color: #333;
-        }
-        
-        header {
-            background-color: #0078D4;
-            color: white;
-            text-align: center;
-            padding: 20px 0;
-        }
-
-        section {
-            max-width: 900px;
-            margin: 20px auto;
-            background: white;
-            padding: 20px;
-            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-            border-radius: 8px;
-        }
-
-        h1 {
-            font-family: 'Georgia', serif;
-            text-align: center;
-            margin-bottom: 20px;
-        }
-
-        /* Table Styles */
-        table {
-            width: 100%;
-            border-collapse: collapse;
-            margin: 0 auto;
-        }
-
-        th, td {
-            text-align: center;
-            padding: 12px;
-            font-size: 16px;
-        }
-
-        th {
-            background-color: #0078D4;
-            color: white;
-            font-weight: bold;
-        }
-
-        tr:nth-child(even) {
-            background-color: #f9f9f9;
-        }
-
-        tr:nth-child(odd) {
-            background-color: #ffffff;
-        }
-
-        tr:hover {
-            background-color: #f1f1f1;
-        }
-
-        td {
-            border: 1px solid #ddd;
-        }
-
-        th {
-            border: 1px solid #0078D4;
-        }
-    </style>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
