--- a/Experiment 1 (Portfolio)/projects.html
+++ b/Experiment 1 (Portfolio)/projects.html
@@ -2,61 +2,7 @@
 <html>
 <head>
     <title>Projects</title>
-    <style>
-        /* General Styles */
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            background-color: #f4f4f4;
-            color: #333;
-        }
-        
-        header {
-            background-color: #0078D4;
-            color: white;
-            text-align: center;
-            padding: 20px 0;
-        }
-
-        section {
-            max-width: 900px;
-            margin: 20px auto;
-            background: white;
-            padding: 20px;
-            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-            border-radius: 8px;
-        }
-
-        h1, h2 {
-            text-align: center;
-            font-family: 'Georgia', serif;
-        }
-
-        .project {
-            margin-bottom: 20px;
-            padding: 15px;
-            border: 1px solid #ddd;
-            border-radius: 8px;
-            background-color: #fafafa;
-            transition: transform 0.2s, box-shadow 0.2s;
-        }
-
-        .project h3 {
-            margin-top: 0;
-            color: #0078D4;
-        }
-
-        .project p {
-            margin: 10px 0 0;
-            line-height: 1.6;
-        }
-
-        .project:hover {
-            transform: scale(1.02);
-            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
-        }
-    </style>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
