--- a/Experiment 1 (Portfolio)/Portfolio.html
+++ b/Experiment 1 (Portfolio)/Portfolio.html
@@ -1,20 +1,25 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <title>Portfolio Website</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Portfolio</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
         <h1>My Portfolio</h1>
     </header>
+
     <nav>
-        <a href="portfolio.html">Home</a>
+        <a href="index.html">Home</a>
         <a href="biolinks.html">Bio Links</a>
         <a href="grades.html">Grades</a>
         <a href="projects.html">Projects</a>
     </nav>
+
     <main>
+        <!-- About Section -->
         <section class="about-section">
             <img src="My Photo.jpeg" alt="Aman Choudhary">
             <h3>Name: Aman Choudhary</h3>
@@ -22,5 +27,9 @@
             <p>Hello! I'm a passionate developer with an interest in creating engaging and user-friendly websites. Welcome to my portfolio!</p>
         </section>
     </main>
+
+    <footer>
+        <p>&copy; 2025 Aman Choudhary</p>
+    </footer>
 </body>
 </html>
