--- a/Experiment 1 (Portfolio)/biolinks.html
+++ b/Experiment 1 (Portfolio)/biolinks.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bio Links</title>
     <link rel="stylesheet" href="styles.css">
 </head>
@@ -8,12 +10,30 @@
     <header>
         <h1>My Bio Links</h1>
     </header>
-    <section>
-        <h2>Find Me Online</h2>
-        <ul>
-            <li><a href="https://www.linkedin.com/in/amanchoudhary18/">LinkedIn</a></li>
-            <li><a href="https://github.com/amanchoudhary1812">GitHub</a></li>
-        </ul>
-    </section>
+
+    <nav>
+        <a href="index.html">Home</a>
+        <a href="biolinks.html">Bio Links</a>
+        <a href="grades.html">Grades</a>
+        <a href="projects.html">Projects</a>
+    </nav>
+
+    <main>
+        <section class="bio-links">
+            <h2>Find Me Online</h2>
+            <div class="bio-link">
+                <img src="github.png" alt="GitHub">
+                <a href="https://github.com/amanchoudhary1812" target="_blank">GitHub</a>
+            </div>
+            <div class="bio-link">
+                <img src="linkedin.png" alt="LinkedIn">
+                <a href="https://www.linkedin.com/in/amanchoudhary18/" target="_blank">LinkedIn</a>
+            </div>
+        </section>
+    </main>
+
+    <footer>
+        <p>&copy; 2025 Aman Choudhary</p>
+    </footer>
 </body>
 </html>
