--- a/Experiment 1 (Portfolio)/grades.html
+++ b/Experiment 1 (Portfolio)/grades.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Grades</title>
     <link rel="stylesheet" href="styles.css">
 </head>
@@ -8,33 +10,47 @@
     <header>
         <h1>My Grades</h1>
     </header>
-    <section>
-        <table>
-            <tr>
-                <th>Class</th>
-                <th>Grade</th>
-                <th>Institute</th>
-                <th>Place</th>
-            </tr>
-            <tr>
-                <td>10th</td>
-                <td>74%</td>
-                <td>Vardhman International School</td>
-                <td>Jaipur</td>
-            </tr>
-            <tr>
-                <td>12th</td>
-                <td>70%</td>
-                <td>Vardhman International School</td>
-                <td>Jaipur</td>
-            </tr>
-            <tr>
-                <td>Graduation</td>
-                <td>74%</td>
-                <td>Rajasthan University</td>
-                <td>Jaipur</td>
-            </tr>
-        </table>
-    </section>
+
+    <nav>
+        <a href="index.html">Home</a>
+        <a href="biolinks.html">Bio Links</a>
+        <a href="grades.html">Grades</a>
+        <a href="projects.html">Projects</a>
+    </nav>
+
+    <main>
+        <section>
+            <table>
+                <tr>
+                    <th>Class</th>
+                    <th>Grade</th>
+                    <th>Institute</th>
+                    <th>Place</th>
+                </tr>
+                <tr>
+                    <td>10th</td>
+                    <td>74%</td>
+                    <td>Vardhman International School</td>
+                    <td>Jaipur</td>
+                </tr>
+                <tr>
+                    <td>12th</td>
+                    <td>70%</td>
+                    <td>Vardhman International School</td>
+                    <td>Jaipur</td>
+                </tr>
+                <tr>
+                    <td>Graduation</td>
+                    <td>74%</td>
+                    <td>Rajasthan University</td>
+                    <td>Jaipur</td>
+                </tr>
+            </table>
+        </section>
+    </main>
+
+    <footer>
+        <p>&copy; 2025 Aman Choudhary</p>
+    </footer>
 </body>
 </html>
