--- a/Experiment 1 (Portfolio)/projects.html
+++ b/Experiment 1 (Portfolio)/projects.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Projects</title>
     <link rel="stylesheet" href="styles.css">
 </head>
@@ -8,16 +10,36 @@
     <header>
         <h1>My Projects</h1>
     </header>
-    <section>
-        <h2>Project Showcase</h2>
-        <div class="project">
-            <h3>Project 1: Portfolio Website</h3>
-            <p>A simple portfolio website showcasing my skills and projects.</p>
-        </div>
-        <div class="project">
-            <h3>Project 2: Todo App</h3>
-            <p>An interactive app to manage daily tasks effectively.</p>
-        </div>
-    </section>
+
+    <nav>
+        <a href="index.html">Home</a>
+        <a href="biolinks.html">Bio Links</a>
+        <a href="grades.html">Grades</a>
+        <a href="projects.html">Projects</a>
+    </nav>
+
+    <main>
+        <section class="projects">
+            <div class="project">
+                <h3>Project 1: Portfolio Website</h3>
+                <p>This is a responsive portfolio website built using HTML, CSS, and JavaScript. It includes sections for Bio Links, Projects, and Grades.</p>
+                <a href="#">View Project</a>
+            </div>
+            <div class="project">
+                <h3>Project 2: To-Do App</h3>
+                <p>A simple to-do application built with React and Firebase for storing tasks and data. It features real-time updates and notifications.</p>
+                <a href="#">View Project</a>
+            </div>
+            <div class="project">
+                <h3>Project 3: E-Commerce Website</h3>
+                <p>This is an e-commerce site built using Node.js and MongoDB. It includes a user authentication system and a shopping cart.</p>
+                <a href="#">View Project</a>
+            </div>
+        </section>
+    </main>
+
+    <footer>
+        <p>&copy; 2025 Aman Choudhary</p>
+    </footer>
 </body>
 </html>
