--- a/Experiment 2 (Quiz game)/index.html
+++ b/Experiment 2 (Quiz game)/index.html
@@ -40,6 +40,7 @@
                 <button>Option C</button>
                 <button>Option D</button>
             </div>
+            <button id="quit-btn">Quit Game</button> <!-- Quit Button -->
         </div>
         <div id="end-game">
             <h1>&#128515</h1>
