--- a/Quiz/quiz.html
+++ b/Quiz/quiz.html
@@ -26,7 +26,7 @@
             padding: 10px; font-size: 1em; margin: 10px 0; border-radius: 5px;
         }
         input { width: calc(100% - 20px); border: 1px solid #ddd; }
-        input:focus { border-color: #007bff; }
+        input:focus { border-color: #0075f3; }
         .start-btn { background-color: blue; color: white; }
         .submit-btn { background-color: green; color: white; }
         .quit-btn { background-color: red; color: white; }
