--- a/Quiz/quiz.html
+++ b/Quiz/quiz.html
@@ -27,7 +27,7 @@
         }
         input { width: calc(100% - 20px); border: 1px solid #ddd; }
         input:focus { border-color: #0075f3; }
-        .start-btn { background-color: blue; color: white; }
+        .start-btn { background-color: rgb(2, 2, 248); color: white; }
         .submit-btn { background-color: green; color: white; }
         .quit-btn { background-color: red; color: white; }
         button { cursor: pointer; border: none; transition: background-color 0.3s; }
