--- a/Quiz/quiz.html
+++ b/Quiz/quiz.html
@@ -28,7 +28,7 @@
         input { width: calc(100% - 20px); border: 1px solid #ddd; }
         input:focus { border-color: #0075f3; }
         .start-btn { background-color: rgb(2, 2, 248); color: white; }
-        .submit-btn { background-color: green; color: white; }
+        .submit-btn { background-color: rgb(0, 128, 0); color: white; }
         .quit-btn { background-color: red; color: white; }
         button { cursor: pointer; border: none; transition: background-color 0.3s; }
         button:hover { opacity: 0.8; }
