--- a/Quiz/quiz.html
+++ b/Quiz/quiz.html
@@ -33,7 +33,7 @@
         button { cursor: pointer; border: none; transition: background-color 0.3s; }
         button:hover { opacity: 0.8; }
         .question { font-size: 1.5em; margin: 20px 0; }
-        .timer { font-size: 1.2em; color: #ff4d4d; }
+        .timer { font-size: 1.2em; color: #fa4b4b; }
         .result { font-size: 1.2em; color: #333; font-weight: bold; margin-top: 20px; }
     </style>
 </head>
